# graphiti

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  add_docs_to_kb.py  pyproject.toml  setup.sh
docs/: 2025-01-03-key-lessons.md  2025-01-03-tasks.md  2025-01-03-troubleshooting.md
server/: .env.example  .gitignore  API_AUTH.md  BACKUP_FEATURE_SUMMARY.md  OAUTH_SETUP.md  PLAYGROUND.md  QUICK_START.md  README_OAUTH_SETUP.md  SECURITY.md  alembic.ini  deploy.sh  pyproject.toml  requirements.txt  setup.sh  test_auth_flow.py  test_browser_auth.py  test_data.json  test_oauth_demo.py  verify_auth_js.py
server/alembic/: env.py
server/deployment/: .env.example  README.md  deploy.sh  graphiti.service.example  nginx-graphiti.conf.example
server/graph_service/: auth.py  config.py  dependencies.py  main.py
server/graph_service/backup/: __init__.py  backup_worker.py  neo4j_export.py  postgres_export.py  restore_service.py  s3_service.py
server/graph_service/models/: database.py  user.py
server/graph_service/routers/: backup.py  ingest.py  oauth.py  retrieve.py
server/graph_service/schemas/: user.py
server/graph_service/services/: oauth_service.py  ownership_service.py
server/graph_service/utils/: security.py
server/scripts/: backup_to_s3.py  register_to_kb.py  setup_backup_timer.sh
server/static/: index.html  login.html  test-auth.html
server/static/css/: login.css  style.css
server/static/js/: app.js  graph-viz.js  login.js
server/systemd/: graphiti-backup-frequent.timer  graphiti-backup.service  graphiti-backup.timer
server/tests/: conftest.py  test_auth_middleware.py  test_backup_restore.py  test_oauth_endpoints.py  test_oauth_service.py  test_ownership_service.py
(+1 files in other folders)
